# Pleco-no-std

pleco/: Cargo.toml
pleco/benches/: bit_benches.rs  board_benches.rs  bot_benches.rs  eval_benches.rs  lookup_benches.rs  move_gen_benches.rs  perft_benches.rs
pleco/src/: lib.rs
pleco/src/board/: board_state.rs  castle_rights.rs  fen.rs  mod.rs  movegen.rs  pgn.rs  piece_locations.rs
pleco/src/bots/: iterative_parallel_mvv_lva.rs  jamboree.rs  mod.rs
pleco/src/core/: bit_twiddles.rs  bitboard.rs  mod.rs  mono_traits.rs  move_list.rs  piece_move.rs  score.rs  sq.rs
pleco/src/helper/: boards.rs  magic.rs  mod.rs  prelude.rs  psqt.rs  zobrist.rs
pleco/src/tools/: eval.rs  mod.rs  pleco_arc.rs  prng.rs  tt.rs
pleco/tests/: basic_bots.rs  board_build.rs  board_hash.rs  board_move_apply.rs  fen_building.rs  move_generating.rs  pseudo_legal_checks.rs
pleco_engine/benches/: eval_benches.rs  multimove_benches.rs  startpos_benches.rs
pleco_engine/src/: consts.rs  engine.rs
pleco_engine/src/movepick/: mod.rs  pick.rs
pleco_engine/src/root_moves/: mod.rs  root_moves_list.rs
pleco_engine/src/search/: eval.rs  mod.rs
pleco_engine/src/tables/: butterfly.rs  capture_piece_history.rs  continuation.rs  counter_move.rs  material.rs  mod.rs  pawn_table.rs
pleco_engine/src/threadpool/: mod.rs
pleco_engine/src/time/: time_management.rs
pleco_engine/src/uci/: options.rs
pleco_engine/tests/: test_get_move.rs
