[package]
name = "pleco"
version = "0.5.0"
authors = ["Stephen Fleischman <stephenf@cs.washington.edu>"]
description = "A blazingly-fast chess library."
homepage = "https://github.com/sfleischman105/Pleco"
documentation = "https://docs.rs/pleco/"
readme = "README.md"
keywords = ["chess","ai","engine","game","gaming"]
license = "MIT"
categories = ["games","game-engines"]
repository = "https://github.com/sfleischman105/Pleco"
autobenches = false

edition = "2021"

include = [
    "src/*",
    "tests/*.rs",
    "Cargo.toml",
    ".gitignore",
    "README.md",
]

[lib]
name = "pleco"
path = "src/lib.rs"
doctest = true

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"
codegen-units = 1
lto = true

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4


[dependencies]
bitflags = "1.3.2"
lazy_static = { version = "1.4", features = ["spin_no_std"], default-features = false }
spin = { version = "0.9", default-features = false, features = ["once"] }

mucow = { version = "0.1.0", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false, features = ["alloc"] }
rayon = { version = "1.5.3", optional = true }
num_cpus = { version = "1.13.1", optional = true }

[features]
default = []

std = [
    "rand",
    "rayon",
    "num_cpus",
    "mucow",
]

nightly = []

[dev-dependencies]
criterion = { version = '0.2.10', default-features = false}

[[bench]]
name = "bench_main"
harness = false
